@@ -5,11 +5,18 @@
 # notice and this notice are preserved. This file is offered as-is,
 # without any warranty.
 
-#how fast going between 0 and 1 (max):
-#buttons (low for precision)
-digital:steer_speed 0.0075
-digital:throttle_speed 0.0075
-#sticks (low for smoothing)
+#speed of change of steering/throttle, per millisecond
+
+#buttons: fast/responsive for large input difference, low/precision for small
+#(first value=minimum speed, second value=increased speed by difference)
+digital:steer_speed 0.0001 0.004
+digital:throttle_speed 0.0001 0.004
+
+#same as above, but used when returning towards neutral position
+digital:steer_center_speed 0.004 0.008
+digital:throttle_center_speed 0.004 0.008
+
+#sticks: smooths out fast and jaggy inputs
 analog:steer_speed 0.02
 analog:throttle_speed 0.02
 
