@@ -100,7 +100,7 @@ min_decreased_steer 0 #degrees
 #change maximum steering this fast
 steer_limit_speed 100 #degrees per second
 
-#differnt turn on inner/outer wheels when turning (popularly called "Ackermann
+#different turn on inner/outer wheels when turning (popularly called "Ackermann
 #Steering", although Erasmus Darwin probably invented it first)
 adaptive_steering true
 
