@@ -63,9 +63,10 @@ TODO: more stuff here!
    * Modified camera (position) can now be reset without restarting the game
 
  * Car improvements:
+   * Major reconfiguration of "Venom" car
+   * Much better steer&throttle control for keyboard/digital input
    * New, more powerful, downforce
    * Dynamic suspension elevation/compensation of downforce and gravity
-   * Major reconfiguration of "Venom" car
    * New tyre friction simulation model (more stable, easier to configure)
    * New tyre combined slip/grip model
    * New tyre/rim contact point evaluation
